--- a/css/main.css
+++ b/css/main.css
@@ -43,12 +43,13 @@ q:before, q:after {
 
 /*-------------------------- Start of General Tags --------------------------*/
 h1 {
-	font: bold  3.125em/1.5 limelight, arial, helvetica, cursive; /* 50.000px */
+	font: bold  3.125em/1.5 limelight, arial, helvetica, cursive; /* 50.000em */
 	color: #000;
 	text-indent: 2em;
 	width: 25em;
 	margin: 0em 5em;
 	text-shadow: 0.063em 0.063em 0.063em #FC3;
+	outline: 2px solid red;
 }
 
  h2, h3, h4, h5, h6 { 
@@ -84,8 +85,9 @@ a {
 /*-------------------------- Start of Body --------------------------*/
 
 body {
-	margin: 0em auto;
+	margin: 0% auto;
 	background: url("../images/metaltextures032.png");
+	font: 1.000em;
 }
 /*-------------------------- End of Body --------------------------*/
 
@@ -203,8 +205,8 @@ nav a:active {
 }
 
 #gallery li {
-	width: 06.666666666667%; /* 4em / 60.000em*/ 
-	margin-left: 5.3em;
+	width: 6.666666666667%; /* 4em / 60.000em*/ 
+	margin-left: 8.833333333333%; /* 5.3em */
 	float: left;
 	display: inline;
 	padding: 0.313em 0 0 0em;
@@ -219,7 +221,7 @@ nav a:active {
 
 aside {
 	width: 21.747572815534%; /* 14.000em / 64.375em */
-	margin: 0.313em 0em 0em 0.750em;
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
 	float: left;
 	background: rgba(225,172,2,0.3);
 	border-radius: 0.375em;
@@ -261,8 +263,8 @@ aside a:hover {
 /*-------------------------- Start of Article --------------------------*/
 
 article {
-	width: 74.509803921569%; /* 47.500em / 63.750em */
-	margin: 0.313em 0em 0em 0.750em;
+	width: 75.243495145631%; /* 47.500em / 64.375em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
 	background: url("../images/package_back.jpg");
 	float: left;
 	border-radius: 0.375em;
@@ -307,8 +309,8 @@ article img {
 /*-------------------------- Start of Section --------------------------*/
 
 section {
-	width: 74.509803921569%; /* 47.500em / 63.750em */
-	margin: 0.625em 0em 0em 0.750em;
+	width: 75.243495145631%; /* 47.500em / 64.375em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
 	background: rgba(225,172,2,0.3);
 	float: left;
 	border-radius: 0.375em;
@@ -318,12 +320,11 @@ section {
 }
 
 section p {
-	padding: 01.315789473684%  /* 0.625em / 47.500em */
+	padding: 01.315789473684%; /* 0.625em / 47.500em */
 	-moz-column-count: 3;
 	-moz-column-gap: 1.563em;
 }
 /*-------------------------- End of Section --------------------------*/
-
 
 /*-------------------------- Start of Footer --------------------------*/
 
@@ -369,9 +370,22 @@ td img {
 
 body {
 	margin: 0em auto;
-	background-image: url("../images/metaltextures032.png");
+	background: #ff0;
+	/*background-image: url("../images/metaltextures032.png");*/
 }
 /*-------------------------- End of Body --------------------------*/
+
+/*-------------------------- Start of contentWrapper --------------------------*/
+
+#contentWrapper {
+	width: 99.038461538462%; /* 64.375em / 65.000em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
+	background: url('../images/orange_stripe.jpg') repeat-x;
+	overflow: hidden;
+	border-radius: 0.250em;
+	outline: 0.125em solid #7E2217;
+}
+/*-------------------------- End of contentWrapper --------------------------*/
 
 h1 {
 	font: bold  1.250em/1.5 limelight, arial, helvetica, cursive; /* 50.000px */
@@ -416,11 +430,87 @@ h1 {
 		line-height: 1.3em;
 	}
 	
+/*-------------------------- Start of Gallery --------------------------*/
+
+#gallery {
+	width: 	98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.516288659794%; /* 0.313em / 60.625em */
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	background: url("../images/package_back.jpg");
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+#gallery ul {
+	width: 98.969072164948%; /* 60.000em / 60.625em */
+	list-style-type: none;
+	border-radius: 0.375em;
+	border: 0.188em #FF0;
+	overflow: hidden;
+}
+
+#gallery li {
+	width: 6.666666666667%; /* 4em / 60.000em*/ 
+	margin-left: 8.833333333333%; /* 5.3em */
+	float: left;
+	display: inline;
+	padding: 0.313em 0 0 0em;
+}
+
+#gallery img {
+	max-width: 100%;
+} 
+/*-------------------------- End of Gallery --------------------------*/
+
+/*-------------------------- Start of Aside --------------------------*/
+
+aside {
+	width: 21.747572815534%; /* 14.000em / 64.375em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
+	float: left;
+	background: rgba(225,172,2,0.3);
+	border-radius: 0.375em;
+	border: 0.031em solid #7E2217;
+	overflow: hidden;
+	box-shadow: 0.125em 0.125em 0.125em #7E2217;
+}
+
+aside ul {
+	width: 98.214285714286%; /* 13.750em */
+	margin: 0.625em 0 0 0.125em;
+	padding: 0;
+	overflow: hidden;
+	display: inline;
+}
+
+aside li {
+	width: 100%; /* 13.750em  */
+	margin: 0.938em auto;
+	text-align: center;
+	float: left;
+}
+
+aside a {
+	text-decoration: none;
+	display: block;
+	text-align: center;
+	line-height: 1.2em;
+} 
+
+aside a:hover {
+	color: #FF0;
+	background: #7E2217;
+	text-shadow: 0.125em 0.125em 0.125em #000;
+	box-shadow: 0.125em 0.125em 0.125em #000;
+}
+/*-------------------------- End of Aside --------------------------*/
+
 /*-------------------------- Start of Article --------------------------*/
 
 article {
-	width: 29.8em;
-	margin: 0.313em 0em 0em 0.750em;
+	width: 75.243495145631%; /* 47.500em / 64.375em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
+	/* margin: 0.313em 0em 0em 0.750em; */
 	background: url("../images/package_back.jpg");
 	float: left;
 	border-radius: 0.375em;
@@ -450,12 +540,12 @@ article img {
 	display: block;
 }
 /*-------------------------- End of Article --------------------------*/
-
+	
 /*-------------------------- Start of Section --------------------------*/
 
 section {
-	width: 29.8em;
-	margin: 0.625em 0em 0em 0.750em;
+	width: 75.243495145631%; /* 47.500em / 64.375em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
 	background: rgba(225,172,2,0.3);
 	float: left;
 	border-radius: 0.375em;
@@ -465,9 +555,9 @@ section {
 }
 
 section p {
-	padding: 01.315789473684%  /* 0.625em / 47.500em */
-	-moz-column-count: 3;
-	-moz-column-gap: 1.563em;
+	padding: 1.315789473684%; /* 0.625em / 47.500em */
+	/*-moz-column-count: 3;
+	-moz-column-gap: 1.563em;*/
 }
 /*-------------------------- End of Section --------------------------*/
 
@@ -494,7 +584,8 @@ footer {
 
 body {
 	margin: 0em auto;
-	background-image: url("../images/metaltextures032.png");
+	background: #ccc;
+	/* background-image: url("../images/metaltextures032.png"); */
 }
 /*-------------------------- End of Body --------------------------*/
 
@@ -544,8 +635,9 @@ h1 {
 /*-------------------------- Start of Article --------------------------*/
 
 article {
-	width: 22.4em;
-	margin: 0.313em 0em 0em 0.750em;
+	width: 75.243495145631%; /* 47.500em / 64.375em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
+	/* margin: 0.313em 0em 0em 0.750em; */
 	background: url("../images/package_back.jpg");
 	float: left;
 	border-radius: 0.375em;
@@ -579,8 +671,8 @@ article img {
 /*-------------------------- Start of Section --------------------------*/
 
 section {
-	width: 22.4em;
-	margin: 0.625em 0em 0em 0.750em;
+	width: 75.243495145631%; /* 47.500em / 64.375em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
 	background: rgba(225,172,2,0.3);
 	float: left;
 	border-radius: 0.375em;
@@ -591,8 +683,8 @@ section {
 
 section p {
 	padding: 01.315789473684%  /* 0.625em / 47.500em */
-	-moz-column-count: 3;
-	-moz-column-gap: 1.563em;
+	/*-moz-column-count: 3;
+	-moz-column-gap: 1.563em;*/
 }
 /*-------------------------- End of Section --------------------------*/
 
@@ -618,7 +710,8 @@ footer {
 
 body {
 	margin: 0em auto;
-	background-image: url("../images/metaltextures032.png");
+	background: #999;
+	/* background-image: url("../images/metaltextures032.png"); */
 }
 /*-------------------------- End of Body --------------------------*/
 
@@ -746,8 +839,8 @@ article img {
 /*-------------------------- Start of Section --------------------------*/
 
 section {
-	width: 18em;
-	margin: 0.625em 0em 0em 0.750em;
+	width: 75.243495145631%; /* 47.500em / 64.375em */
+	margin: 0.486213592233%; /* 0.313em / 64.375em */
 	background: rgba(225,172,2,0.3);
 	float: left;
 	border-radius: 0.375em;
@@ -756,8 +849,8 @@ section {
 	box-shadow: 0.125em 0.125em 0.125em #7E2217;
 }
 
-section p {
-	padding: 01.315789473684%  /* 0.625em / 47.500em */
+/*section p {
+	padding: 01.315789473684%  /* 0.625em / 47.500em 
 	-moz-column-count: 3;
 	-moz-column-gap: 1.563em;
 }
