--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,7 @@ nav a:active {
 /*-------------------------- Start of Gallery --------------------------*/
 
 #gallery {
-	width: 	94.660970873786%; /*98.058252427184%; /* 61.250em    60.625em / 64.375em */
+	width: 	98.058252427184%; /* 60.500em    60.625em / 64.375em */
 	margin: 0.486213592233%; /*0.313em / 64.375em */
 	border-radius: 0.375em;
 	border: 0.031em solid #7E2217;
@@ -318,9 +318,10 @@ section {
 }
 
 section p {
-	padding: 01.315789473684%  /* 0.625em / 47.500em */
-	-moz-column-count: 3;
-	-moz-column-gap: 1.563em;
+	padding: 0.658947368421%;   /* 0.313em / 47.500em */
+	padding-bottom: .1em;
+	/*-moz-column-count: 3;
+	-moz-column-gap: 1.563em;*/
 }
 /*-------------------------- End of Section --------------------------*/
 
@@ -330,12 +331,11 @@ section p {
 footer {
 	width: 98.058252427184%; /* 60.625em / 64.375em */
 	margin: 0.625em  0em 0em 0.750em;
-	padding: 1.030927835052%; /* 0.625em / 60.625em */
+	/*padding: 1.030927835052%; /* 0.625em / 60.625em */
 	float: right;
 	background: #fff;
 	border-bottom-right-radius: 0.375em;
 	border-bottom-left-radius: 0.375em;
-	outline: 2px solid red;
 }
 /*-------------------------- End of Footer --------------------------*/
 
@@ -620,7 +620,7 @@ section {
 }
 
 section p {
-	padding: 01.315789473684%  /* 0.625em / 47.500em */
+	padding: 0.658947368421%; /* 0.313em / 47.500em */
 	-moz-column-count: 3;
 	-moz-column-gap: 1.563em;
 }
@@ -879,9 +879,6 @@ article img {
 section {
 	width: 	98.058252427184%; /* 60.625em / 64.375em */
 	margin: 0.486213592233%; /*0.313em / 64.375em */
-
-	/*width: 75.243495145631%; /* 48.438em / 64.375em */
-	/*margin: 0.486213592233%; /* 0.313em / 64.375em */
 	background: rgba(225,172,2,0.3);
 	float: left;
 	border-radius: 0.375em;
@@ -891,9 +888,7 @@ section {
 }
 
 section p {
-	padding: 01.315789473684%  /* 0.625em / 47.500em */
-	-moz-column-count: 3;
-	-moz-column-gap: 1.563em;
+	padding: 0.658947368421%; /* 0.313em / 47.500em */
 }
 /*-------------------------- End of Section --------------------------*/
 
@@ -1045,7 +1040,7 @@ nav a:active {
 
 #gallery {
 	width: 	98.058252427184%; /* 60.625em / 64.375em */
-	margin: 1.941747572816%; /* 1.250em / 64.375em */
+	margin: 0.486213592233%; /*0.313em / 64.375em */
 	border-radius: 0.375em;
 	border: 0.031em solid #7E2217;
 	background: url("../images/package_back.jpg");
@@ -1076,9 +1071,8 @@ nav a:active {
 /*-------------------------- Start of Aside --------------------------*/
 
 aside {
-	width: auto; /*21.747572815534%; /* 14.000em / 64.375em */
-	margin: 1.941747572816%; /* 1.250em / 64.375em */
-	/*margin: auto; /*0.486213592233%; /*0.313em / 64.375em */
+	width: 	98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.486213592233%; /*0.313em / 64.375em */
 	float: left;
 	background: rgba(225,172,2,0.3);
 	border-radius: 0.375em;
@@ -1120,9 +1114,8 @@ aside a:hover {
 /*-------------------------- Start of Article --------------------------*/
 
 article {
-	width: auto; /*75.243495145631%; /* 48.438em / 64.375em */
-	margin: 1.941747572816%; /* 1.250em / 64.375em */
-	/*margin: auto; /*0.486213592233%; /*0.313em / 64.375em */
+	width: 	98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.486213592233%; /*0.313em / 64.375em */
 	background: url("../images/package_back.jpg");
 	float: left;
 	border-radius: 0.375em;
@@ -1156,8 +1149,8 @@ article img {
 /*-------------------------- Start of Section --------------------------*/
 
 section {
-	width: auto; /*75.243495145631%; /* 48.438em / 64.375em */
-	margin: auto; /*0.486213592233%; /* 0.313em / 64.375em */
+	width: 	98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.486213592233%; /*0.313em / 64.375em */
 	background: rgba(225,172,2,0.3);
 	float: left;
 	border-radius: 0.375em;
@@ -1167,17 +1160,15 @@ section {
 }
 
 section p {
-	padding: 01.315789473684%  /* 0.625em / 47.500em */
-	-moz-column-count: 3;
-	-moz-column-gap: 1.563em;
+	padding: 0.658947368421%; /* 0.313em / 47.500em */
 }
 /*-------------------------- End of Section --------------------------*/
 
 /*-------------------------- Start of Footer --------------------------*/
 
 footer {
-	width: auto; /*98.058252427184%; /* 60.625em / 64.375em */
-	margin: auto; /*0.625em  0em 0em 0.750em;
+	width: 	98.058252427184%; /* 60.625em / 64.375em */
+	margin: 0.486213592233%; /*0.313em / 64.375em */
 	padding: 1.030927835052%; /* 0.625em / 60.625em */
 	float: right;
 	background: #FFF/*E83F00;*/
